WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92068
[Qt] Fix conversion from GregorianDateTime to QTime
https://bugs.webkit.org/show_bug.cgi?id=92068
Summary
[Qt] Fix conversion from GregorianDateTime to QTime
Patrick R. Gansterer
Reported
2012-07-23 23:55:29 PDT
[Qt] Fix conversion from GregorianDateTime to QTime
Attachments
Patch
(2.28 KB, patch)
2012-07-24 00:05 PDT
,
Patrick R. Gansterer
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Patrick R. Gansterer
Comment 1
2012-07-24 00:05:16 PDT
Created
attachment 153972
[details]
Patch
Simon Hausmann
Comment 2
2012-07-24 00:13:34 PDT
Comment on
attachment 153972
[details]
Patch Good catch :)
WebKit Review Bot
Comment 3
2012-07-24 01:02:46 PDT
Comment on
attachment 153972
[details]
Patch Clearing flags on attachment: 153972 Committed
r123435
: <
http://trac.webkit.org/changeset/123435
>
WebKit Review Bot
Comment 4
2012-07-24 01:02:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug