[Qt] Fix conversion from GregorianDateTime to QTime https://bugs.webkit.org/show_bug.cgi?id=92068

Reviewed by Simon Hausmann.

* bridge/qt/qt_runtime.cpp:
(JSC::Bindings::convertValueToQVariant):
* bridge/qt/qt_runtime_qt4.cpp:
(JSC::Bindings::convertValueToQVariant):


Canonical link: https://commits.webkit.org/109885@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123435 268f45cc-cd09-0410-ab3c-d52691b4dbfc